--- a/app/src/main/res/layout/fragment_password_requests.xml
+++ b/app/src/main/res/layout/fragment_password_requests.xml
@@ -13,7 +13,19 @@
         android:layout_weight="0.5"></LinearLayout>
 
     <Button
-        android:id="@+id/sendData"
+        android:id="@+id/LockPasswordRequest"
+        style="?android:textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:background="@drawable/shapes"
+        android:textColor="#fff"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:text="Lock Password Requests"
+        android:textStyle="bold|italic" />
+    <Button
+        android:id="@+id/LockPasswordRecieve"
         style="?android:textAppearanceSmall"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -24,8 +36,23 @@
         android:gravity="center"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:text="Send Data To Locks"
+        android:text="Lock Password Recieve"
         android:textStyle="bold|italic" />
+    <Button
+        android:id="@+id/lockForm"
+        style="?android:textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/shapes"
+        android:textColor="#fff"
+        android:gravity="center"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:text="Lock Form Case"
+        android:textStyle="bold|italic" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
