--- a/app/src/main/res/layout/fragment_product_and_lock.xml
+++ b/app/src/main/res/layout/fragment_product_and_lock.xml
@@ -13,7 +13,7 @@
         android:layout_weight="0.5"></LinearLayout>
 
     <Button
-        android:id="@+id/sendData"
+        android:id="@+id/OneByOne"
         style="?android:textAppearanceSmall"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -24,9 +24,21 @@
         android:gravity="center"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:text="Send Data To Locks"
+        android:text="One By One"
         android:textStyle="bold|italic" />
-
+    <Button
+        android:id="@+id/ContinueConnection"
+        style="?android:textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/shapes"
+        android:textColor="#fff"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:text="Continue Connection"
+        android:textStyle="bold|italic" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
