--- a/app/src/main/res/layout/fragment_all_items.xml
+++ b/app/src/main/res/layout/fragment_all_items.xml
@@ -35,6 +35,7 @@
             android:src="@drawable/searchicon"
             android:layout_weight="0.5"/>
         <ImageView
+            android:id="@+id/iv"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginRight="20dp"
