--- a/app/src/main/res/layout/fragment_all_machines.xml
+++ b/app/src/main/res/layout/fragment_all_machines.xml
@@ -28,7 +28,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/showlocks"
+            android:id="@+id/iv"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginRight="20dp"
