--- a/app/src/main/res/layout/fragment_lock_password_recieve.xml
+++ b/app/src/main/res/layout/fragment_lock_password_recieve.xml
@@ -7,7 +7,44 @@
     android:layout_height="match_parent"
     android:background="#293d68"
     >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        android:layout_weight="1">
 
+        <Button
+            android:id="@+id/bar"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_weight="1"
+            android:background="@drawable/shapes"
+            android:gravity="center"
+            android:text="Barcode On"
+            android:textColor="#fff" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/bartext"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="1.5"
+            android:gravity="center"
+            android:layout_marginRight="20dp"
+            android:hint="Lock Barcode"
+            android:textColor="#fff"
+            android:textColorHint="#fff"
+            android:textStyle="italic" />
+
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
