--- a/app/src/main/res/layout/fragment_machine_and_locks.xml
+++ b/app/src/main/res/layout/fragment_machine_and_locks.xml
@@ -48,15 +48,6 @@
                 android:layout_weight="1"
                 android:hint="Machine Barcode"
                 />
-            <Button
-                android:id="@+id/check"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.5"
-                android:layout_marginRight="5dp"
-                android:background="@drawable/shape"
-                android:textColor="#fff"
-                android:text="Check"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -81,16 +72,6 @@
                 android:layout_weight="1"
                 android:hint="Lock Barcode"
                 />
-            <Button
-                android:id="@+id/connect"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.5"
-                android:layout_marginRight="5dp"
-                android:background="@drawable/shape"
-                android:layout_marginTop="5dp"
-                android:textColor="#fff"
-                android:text="Connect"/>
         </LinearLayout>
 
 
@@ -108,8 +89,9 @@
                 android:orientation="horizontal"
                 android:layout_weight="1">
                 <Button
-                    android:text="Lock Barcode"
+                    android:text="Connect"
                     android:gravity="center"
+                    android:id="@+id/connect"
                     android:background="@drawable/shape"
                     android:textColor="#fff"
                     android:layout_width="0dp"
@@ -119,7 +101,8 @@
                     android:layout_marginLeft="5dp"
                     android:layout_weight="1"/>
                 <Button
-                    android:text="Item Barcode"
+                    android:text="Disconnect"
+                    android:id="@+id/disconnect"
                     android:gravity="center"
                     android:background="@drawable/shape"
                     android:textColor="#fff"
@@ -129,29 +112,9 @@
                     android:layout_marginRight="5dp"
                     android:layout_weight="1"/>
 
-                <Button
-                    android:text="Status"
-                    android:gravity="center"
-                    android:background="@drawable/shape"
-                    android:textColor="#fff"
-                    android:layout_width="0dp"
-                    android:textSize="12sp"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="5dp"
-
-                    android:layout_weight="0.5"/>
-                <Button
-                    android:text="Select"
-                    android:gravity="center"
-                    android:background="@drawable/shape"
-                    android:textColor="#fff"
-                    android:layout_width="0dp"
-                    android:textSize="12sp"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="5dp"
-                    android:layout_weight="0.5"/>
             </LinearLayout>
-            <ListView
+            <LinearLayout
+                android:orientation="vertical"
                 android:id="@+id/listview"
                 android:layout_marginBottom="5dp"
                 android:layout_marginRight="5dp"
@@ -159,8 +122,8 @@
                 android:layout_marginLeft="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="8">
-            </ListView>
+                android:layout_weight="4">
+            </LinearLayout>
 
         </LinearLayout>
 
