--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,26 +14,58 @@
         android:layout_height="0dp"
         android:layout_weight="0.6"
         android:src="@drawable/logozzz"/>
-    <Spinner
-        android:id="@+id/select"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.3"
+        android:orientation="horizontal"
+        android:layout_marginBottom="20dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_marginLeft="20dp"
+            android:text="User Type"
+            android:gravity="center"
+            android:textColor="#fff"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+        <Spinner
+            android:id="@+id/select"
+            android:layout_marginRight="20dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
 
-        ></Spinner>
-    <Spinner
-        android:id="@+id/listOfIds"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
+            ></Spinner>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.3"
+        android:orientation="horizontal"
+        android:layout_marginBottom="20dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_marginLeft="20dp"
+            android:text="User IDs"
+            android:gravity="center"
+            android:textColor="#fff"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+        <Spinner
+            android:id="@+id/listOfIds"
+            android:layout_marginRight="20dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
 
-        ></Spinner>
+            ></Spinner>
+    </LinearLayout>
+
     <EditText
         android:id="@+id/password"
         android:layout_width="match_parent"
@@ -48,7 +80,7 @@
         android:layout_marginRight="30dp"
         android:layout_marginBottom="20dp"
         android:imeOptions="actionUnspecified"
-        android:inputType="numberPassword"
+        android:inputType="textPassword"
         android:maxLines="1" />
 
     <Button
