--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,6 +47,7 @@
             android:background="@drawable/textview_border"
             android:layout_weight="0.1"
             android:textColor="#fff" />
+
         <TextView
             android:id="@+id/p1"
             android:layout_width="0dp"
@@ -55,7 +56,6 @@
             android:background="@drawable/textview_border"
             android:layout_weight="0.1"
             android:textColor="#fff" />
-
         <TextView
             android:id="@+id/p4"
             android:layout_width="0dp"
@@ -65,6 +65,37 @@
             android:layout_weight="0.1"
             android:textColor="#fff" />
 
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:orientation="horizontal"
+        android:layout_weight="1">
+        <EditText
+            android:id="@+id/passwordLock"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:hint="Enter Password"
+            android:inputType="number"
+            android:textColorHint="#fff"
+            android:background="@drawable/shape2"
+            android:textStyle="italic"
+            android:paddingLeft="50dp"
+            android:layout_weight="2"/>
+        <Button
+            android:id="@+id/open"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:maxLength="4"
+            android:background="@drawable/shapes"
+            android:gravity="center"
+            android:text="Open"
+            android:textColor="#fff" />
     </LinearLayout>
     <Button
         android:id="@+id/wifi"
@@ -114,4 +145,5 @@
         android:layout_weight="5"
         android:scrollbars = "vertical"
         android:textColor="#fff" />
+
 </LinearLayout>
